[gd_scene load_steps=8 format=3 uid="uid://cjhn8k5sbf2nl"]

[ext_resource type="Script" path="res://scenes/menus/title.gd" id="1_qhs7k"]
[ext_resource type="AudioStream" uid="uid://h0gxegiq7d4y" path="res://assets/sfx/shuffle.wav" id="2_7m6np"]
[ext_resource type="Texture2D" uid="uid://cngjy75y6m3na" path="res://assets/gfx/surelogo1.png" id="3_xvjck"]
[ext_resource type="Texture2D" uid="uid://bu5p545f0chyb" path="res://assets/gfx/mdlogo2.png" id="4_138hm"]
[ext_resource type="LabelSettings" uid="uid://c4wxjgk0mnfpx" path="res://assets/fonts/font1.tres" id="5_f6jk7"]
[ext_resource type="LabelSettings" uid="uid://cb45u5d2xmf4i" path="res://assets/fonts/font2.tres" id="6_apxgl"]
[ext_resource type="AudioStream" uid="uid://bwqw48m7q66wb" path="res://assets/sfx/amb4.wav" id="7_475oq"]

[node name="Title" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_qhs7k")
metadata/_edit_lock_ = true

[node name="Bg" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.215686, 0, 1)
metadata/_edit_lock_ = true

[node name="SureshotLogo" type="Sprite2D" parent="."]
position = Vector2(400, 200)
texture = ExtResource("3_xvjck")

[node name="MLogo1" type="Sprite2D" parent="."]
position = Vector2(90, 545)
texture = ExtResource("4_138hm")

[node name="MLogo2" type="Sprite2D" parent="."]
position = Vector2(720, 545)
texture = ExtResource("4_138hm")

[node name="Guide" type="Label" parent="."]
modulate = Color(0.607843, 0.607843, 0.607843, 1)
layout_mode = 0
offset_left = 210.0
offset_top = 573.0
offset_right = 591.0
offset_bottom = 588.0
text = "UP/DOWN=Select Option, ENTER=Proceed, ESC=Quit
"
label_settings = ExtResource("5_f6jk7")

[node name="Options" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_lock_ = true

[node name="Story" type="Label" parent="Options"]
modulate = Color(0, 0.411765, 0, 1)
layout_mode = 0
offset_left = 368.0
offset_top = 338.0
offset_right = 432.0
offset_bottom = 362.0
text = "Story"
label_settings = ExtResource("6_apxgl")

[node name="StoryDesc" type="Label" parent="Options"]
modulate = Color(0, 0.294118, 0, 1)
layout_mode = 1
offset_left = 229.0
offset_top = 363.0
offset_right = 572.0
offset_bottom = 378.0
text = "Discover how the Sure Shot tactic came about..."
label_settings = ExtResource("5_f6jk7")

[node name="BattleGround" type="Label" parent="Options"]
modulate = Color(0, 0.411765, 0, 1)
layout_mode = 0
offset_left = 322.0
offset_top = 388.0
offset_right = 479.0
offset_bottom = 412.0
text = "Battle Ground"
label_settings = ExtResource("6_apxgl")

[node name="BattleGroundDesc" type="Label" parent="Options"]
modulate = Color(0, 0.294118, 0, 1)
layout_mode = 0
offset_left = 278.0
offset_top = 413.0
offset_right = 522.0
offset_bottom = 428.0
text = "Play through the 25 preset areas..."
label_settings = ExtResource("5_f6jk7")

[node name="TrainingGround" type="Label" parent="Options"]
modulate = Color(0, 0.411765, 0, 1)
layout_mode = 0
offset_left = 308.0
offset_top = 438.0
offset_right = 492.0
offset_bottom = 462.0
text = "Training Ground"
label_settings = ExtResource("6_apxgl")

[node name="TrainingGroundDesc" type="Label" parent="Options"]
modulate = Color(0, 0.294118, 0, 1)
layout_mode = 0
offset_left = 301.0
offset_top = 463.0
offset_right = 499.0
offset_bottom = 478.0
text = "Configure your own game...
"
label_settings = ExtResource("5_f6jk7")

[node name="HowToPlay" type="Label" parent="Options"]
modulate = Color(0, 0.411765, 0, 1)
layout_mode = 0
offset_left = 329.0
offset_top = 488.0
offset_right = 471.0
offset_bottom = 512.0
text = "How To Play"
label_settings = ExtResource("6_apxgl")

[node name="HowToPlayDesc" type="Label" parent="Options"]
modulate = Color(0, 0.294118, 0, 1)
layout_mode = 0
offset_left = 273.0
offset_top = 513.0
offset_right = 528.0
offset_bottom = 528.0
text = "A brief guide to playing Sure Shot...
"
label_settings = ExtResource("5_f6jk7")

[node name="Shuffle" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_7m6np")

[node name="Ambience" type="AudioStreamPlayer" parent="."]
stream = ExtResource("7_475oq")
autoplay = true

[connection signal="finished" from="Ambience" to="." method="_on_ambience_finished"]
